--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "nodemon": "^2.0.16"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "start-server": "nodemon server.js",
     "start-client": "npm start --prefix client",
     "dev": "concurrently \"npm run start-server\" \"npm run start-client\""
