--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "i18next": "^21.8.4",
     "js-cookie": "^3.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^11.16.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "validator": "^13.7.0",
