--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "i18next": "^21.8.4",
+    "i18next-browser-languagedetector": "^6.1.4",
     "js-cookie": "^3.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
@@ -21,6 +22,8 @@
     "react-i18next": "^11.16.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
+    "react-tag-input-component": "^1.0.7",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
