--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "passport": "^0.5.3",
     "passport-jwt": "^4.0.0",
     "passport-local-mongoose": "^7.1.1"
